--- a/client/src/app/article/list/list.component.html
+++ b/client/src/app/article/list/list.component.html
@@ -1,3 +1,26 @@
-<p>
-  list works!
-</p>
+<br><br>
+&nbsp;&nbsp;<button class="btn btn-success btn-lg">Create Article</button><br><br>
+<table class="table table-bordered table-hover">
+
+    <thead class="thead-light">
+        <tr>
+          <th scope="col">#No</th>
+          <th scope="col">Name</th>
+          <th scope="col">Type</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let article of articles">
+          <td>{{ article.no }}</td>
+          <td>{{ article.name }}</td>
+          <td>{{ article.type }}</td>
+          <td>
+              <button class="btn btn-outline-secondary">Edit</button>&nbsp;
+              <button class="btn btn-outline-danger">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+
+</table>
