--- a/client/src/app/article/create/create.component.html
+++ b/client/src/app/article/create/create.component.html
@@ -20,11 +20,10 @@
           </select>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="btn btn-success">Create</button>
         </div>
 
       </form>
-
     </div>
   </div>
 </div>
