--- a/client/src/app/article/list/list.component.html
+++ b/client/src/app/article/list/list.component.html
@@ -18,7 +18,7 @@
           <td>{{ article.type }}</td>
           <td>
               <button class="btn btn-outline-secondary">Edit</button>&nbsp;
-              <button class="btn btn-outline-danger">Delete</button>
+              <button class="btn btn-outline-danger" (click)="deleteArticle(article._id)">Delete</button>
           </td>
         </tr>
       </tbody>
