--- a/client/src/app/product/list/list.component.html
+++ b/client/src/app/product/list/list.component.html
@@ -1,3 +1,27 @@
-<p>
-  list works!
-</p>
+<br><br>
+&nbsp;&nbsp;<button class="btn btn-success btn-lg">Create Product</button><br><br>
+<table class="table table-bordered table-hover">
+
+    <thead class="thead-light">
+        <tr>
+          <th scope="col">#No</th>
+          <th scope="col">Name</th>
+          <th scope="col">Articles</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let product of products">
+          <td>{{ product.no }}</td>
+          <td>{{ product.name }}</td>
+          <td>{{ product.article }}</td>
+          <td>
+              <button class="btn btn-outline-secondary">Edit</button>&nbsp;
+              <button class="btn btn-outline-danger">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+
+</table>
+
