--- a/client/src/app/product/list/list.component.html
+++ b/client/src/app/product/list/list.component.html
@@ -18,7 +18,7 @@
           <td>{{ product.article }}</td>
           <td>
               <button class="btn btn-outline-secondary">Edit</button>&nbsp;
-              <button class="btn btn-outline-danger">Delete</button>
+              <button class="btn btn-outline-danger" (click)="deleteProduct(product._id)">Delete</button>
           </td>
         </tr>
       </tbody>
