--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,10 +2,10 @@
   <!-- Navbar content -->
   <ul class="navbar-nav bd-navbar-nav flex-row">
       <li class="nav-item active">
-        <button class="btn btn-outline-dark" routerLink="articles">Articles</button>
+        <button class="btn btn-dark" routerLink="articles">Articles</button>
       </li>&nbsp;&nbsp;
       <li class="nav-item active">
-          <button class="btn btn-outline-light" routerLink="products">Products</button>
+          <button class="btn btn-light" routerLink="products">Products</button>
       </li>
   </ul>
 </nav>
