--- a/client/src/app/article/update/update.component.html
+++ b/client/src/app/article/update/update.component.html
@@ -20,7 +20,7 @@
             </select>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-success">Create</button>
+            <button type="submit" class="btn btn-success">Save</button>
           </div>
 
         </form>
