--- a/client/src/app/product/update/update.component.html
+++ b/client/src/app/product/update/update.component.html
@@ -1,3 +1,31 @@
-<p>
-  update works!
-</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <br><br>
+        <form name="createProductForm" #createProductForm="ngForm" (ngSubmit)="updateProduct()">
+
+          <div class="form-group">
+              <label for="name">Number</label>
+              <input type="number" class="form-control" [(ngModel)]="productForm.no" name="no" required>
+          </div>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" [(ngModel)]="productForm.name" name="name" required>
+          </div>
+          <div class="form-group">
+            <label for="name">Articles</label>
+            <select class="form-control" [(ngModel)]="productForm.article" name="article" multiple required>
+                <option *ngFor="let article of articlesList" value="{{ article._id }}">
+                  {{ article.name }}
+                </option>
+            </select>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-success">Save</button>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+
