--- a/client/src/app/article/list/list.component.html
+++ b/client/src/app/article/list/list.component.html
@@ -1,5 +1,23 @@
 <br><br>
 &nbsp;&nbsp;<button class="btn btn-success btn-lg" routerLink="/articles/create">Create Article</button><br><br>
+<form name="filterForm" class="form-inline" #filterForm="ngForm" (ngSubmit)="filterArticles()">
+    &nbsp;&nbsp;
+    <div class="form-group">
+      <label for="name" class="form-label">Name</label>&nbsp;&nbsp;
+      <input type="text" class="form-control" [(ngModel)]="filterData.name" name="name" id="name">&nbsp;&nbsp;
+    </div>
+    <div class="form-group">
+      <label for="name">Type</label>&nbsp;&nbsp;
+      <select class="form-control" [(ngModel)]="filterData.type" name="type">
+        <option value="">All</option>
+        <option>Raw Material</option>
+        <option>Semi Processed</option>
+      </select>&nbsp;&nbsp;&nbsp;&nbsp;
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-secondary">Filter</button>
+    </div>
+  </form><br><br>
 <table class="table table-bordered table-hover">
 
     <thead class="thead-light">
