--- a/client/src/app/product/list/list.component.html
+++ b/client/src/app/product/list/list.component.html
@@ -1,5 +1,25 @@
 <br><br>
 &nbsp;&nbsp;<button class="btn btn-success btn-lg" routerLink="/products/create">Create Product</button><br><br>
+<br>
+<form name="filterForm" class="form-inline" #filterForm="ngForm" (ngSubmit)="filterProducts()">
+  &nbsp;&nbsp;
+  <div class="form-group">
+    <label for="name" class="form-label">Name</label>&nbsp;&nbsp;
+    <input type="text" class="form-control" [(ngModel)]="filterData.name" name="name" id="name">&nbsp;&nbsp;
+  </div>
+  <div class="form-group">
+    <label for="name">Articles</label>&nbsp;&nbsp;
+    <select class="form-control" [(ngModel)]="filterData.article" name="article">
+      <option value="">All</option>
+      <option *ngFor="let article of articlesList" value="{{ article._id }}">
+          {{ article.name }}
+      </option>
+    </select>&nbsp;&nbsp;&nbsp;&nbsp;
+  </div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-secondary">Filter</button>
+  </div>
+</form><br><br>
 <table class="table table-bordered table-hover">
 
     <thead class="thead-light">
