--- a/client/src/app/article/most-products/most-products.component.html
+++ b/client/src/app/article/most-products/most-products.component.html
@@ -7,7 +7,7 @@
             <label for="name">Articles</label>
             <select class="form-control" [(ngModel)]="selectedArticles" name="article" multiple required (change)="getProductsCount()">
                 <option value="">-- Select articles to find article with most products --</option>
-                <option *ngFor="let article of articlesList" value="{{ article._id }}">
+                <option *ngFor="let article of articles" value="{{ article._id }}">
                   {{ article.name }}
                 </option>
             </select>
