get articles products count function

--- a/client/src/app/article/most-products/most-products.component.html
+++ b/client/src/app/article/most-products/most-products.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-md-6">
         <br><br>
-        <form (ngSubmit)="mostProductsArticle()">
+        <form (ngSubmit)="getMostProductsArticle()">
           <div class="form-group">
             <label for="name">Articles</label>
             <select class="form-control" [(ngModel)]="selectedArticles" name="article" multiple required (change)="getProductsCount()">
