add get Max Products Article function - client

--- a/client/src/app/article/most-products/most-products.component.html
+++ b/client/src/app/article/most-products/most-products.component.html
@@ -20,6 +20,6 @@
     </div>
 
     <div class="jumbotron">
-        <p class="lead">Article with most products is: {{ mostProductsArticle.name }} and has {{ mostProductsArticle.max }} products</p>
+        <p class="lead" *ngIf="mostProductsArticle.name">Article with most products is: {{ mostProductsArticle.name }} and has {{ mostProductsArticle.count }} products</p>
       </div>
   </div>
